# List-and-Vector-Data-Structures

./: .cc_token  .clang-format  .gitignore  .travis.yml  README.md
pa1-math/: .pa1-math  CMakeLists.txt
pa1-math/eval/: pow-iter-eval.c  pow-recur-eval.c  pow-std-eval.c  sqrt-iter-eval.c  sqrt-recur-eval.c  sqrt-std-eval.c
pa1-math/src/: pow-iter-adhoc.c  pow-iter.c  pow-iter.h  pow-recur-adhoc.c  pow-recur.c  pow-recur.h  sqrt-iter-adhoc.c  sqrt-iter.c  sqrt-iter.h  sqrt-recur-adhoc.c  sqrt-recur.c  sqrt-recur.h
pa1-math/test/: pow-iter-basic-test.c  pow-iter-directed-test.c  pow-iter-random-test.c  pow-recur-basic-test.c  pow-recur-directed-test.c  pow-recur-random-test.c  sqrt-iter-basic-test.c  sqrt-iter-directed-test.c  sqrt-iter-random-test.c  sqrt-recur-basic-test.c  sqrt-recur-directed-test.c  sqrt-recur-random-test.c  utst.h
pa2-dstruct/: CMakeLists.txt
pa2-dstruct/eval/: list-find-eval.c  list-push-back-eval.c  vector-find-eval.c  vector-push-back-v1-eval.c  vector-push-back-v2-eval.c
pa2-dstruct/src/: ece2400-stdlib.c  ece2400-stdlib.h  list-adhoc.c  list.c  list.h  vector-adhoc.c  vector.c  vector.h
pa2-dstruct/test/: list-basic-test.c  list-directed-test.c  list-random-test.c  utst.h  vector-basic-test.c  vector-directed-test.c  vector-random-test.c
